Ajdusted about page spacing fixed class naming convention

--- a/Profile/float/styles/style.css
+++ b/Profile/float/styles/style.css
@@ -12,7 +12,6 @@ html, body {
 body {
 	font-family: LucidaGrande;
     background-color: gray;
-    /*background-image: -webkit-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);*/
     background: rgb(237,237,237); /* Old browsers */
 background: -moz-radial-gradient(center, ellipse cover,  rgba(237,237,237,1) 0%, rgba(183,183,183,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(237,237,237,1)), color-stop(100%,rgba(183,183,183,1))); /* Chrome,Safari4+ */
@@ -21,9 +20,7 @@ background: -o-radial-gradient(center, ellipse cover,  rgba(237,237,237,1) 0%,rg
 background: -ms-radial-gradient(center, ellipse cover,  rgba(237,237,237,1) 0%,rgba(183,183,183,1) 100%); /* IE10+ */
 background: radial-gradient(ellipse at center,  rgba(237,237,237,1) 0%,rgba(183,183,183,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#b7b7b7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    
 
-    
     color: #aaaaaa;
     font-style: italic;
     margin:0;
@@ -73,11 +70,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c3c3c3', end
     
 }
 
-#title_name {
+#title-name {
 	float: left;
 }
 
-.title_right {
+.title-right {
+	display: none;         /*   TEMPORARY   */
 	float: right;
 	padding-right:35px;
 	cursor:pointer;
@@ -159,11 +157,11 @@ footer li {
     display:inline;
 }
 
-.content_block {
+.content-block {
 	width: 960px;
 }
 
-.inner_image {
+.inner-image {
     display:inline;
 }
 
@@ -173,7 +171,7 @@ footer li {
 	height: 15px;
 }
 
-.images_tabs {
+.images-tabs {
 	display: block;
 	padding-top: 10px;
 	margin-left: auto;
@@ -198,7 +196,7 @@ p {
 	padding: 5px;
 }
 
-.contact_left {
+.contact-left {
 	float:left;
 	width: 80px;
 	padding-left: 5px;
@@ -206,13 +204,13 @@ p {
 	text-align: right;
 }
 
-.contact_right {
+.contact-right {
 	float:left;
 	width: 295px;
     text-align: left;
 }
 
-.inline_image {
+.inline-image {
 	padding: 0 10px;
 }
 
